<resources>
    <string name="app_name">RPS</string>
    <string name="rock_paper_scissors_shoot">Rock Paper Scissors Shoot!</string>
    <string name="rock_button">Rock Button</string>
    <string name="scissors_button">Scissors Button</string>
    <string name="paper_button">Paper Button</string>
    <string name="the_computer_chose">The Computer Chose</string>
    <string name="the_computers_choice">The Computers Choice</string>
    <string name="you_chose">You Chose</string>
    <string name="the_computers_choice_image">The Computers Choice</string>
    <string name="winner_display">Winner Display</string>
    <string name="comp_0_player_0">Comp: 0 - Player: 0</string>
    <string name="reset">Reset</string>
    <string name="themes">Themes</string>
    <string name="original_theme_icon">original theme icon</string>
    <string name="space_theme_button">Space Theme Button</string>
    <string name="nature_theme_button">Nature Theme Button</string>
</resources>